Cocoa: don't adjust download shelf height to account for divider

Making this change during a screen transition causes a browser view
layout. However, AppKit appears to manually adjust subviews of views that
were resized due to a screen change, and does this using the former sizes.
This happens *after* layout is triggered in this case, causing the contents
of the view to be pushed down by the difference in height between displays.

Bug: 850829
Change-Id: I53a0b03114fa9647c389595265211f5639a523a0
Reviewed-on: https://chromium-review.googlesource.com/1095322
Reviewed-by: Sidney San Martín <sdy@chromium.org>
Commit-Queue: Leonard Grey <lgrey@chromium.org>
Cr-Commit-Position: refs/heads/master@{#566189}
Former-commit-id: b6a6f344bb8e4279c60f48e02caa7cbef461765b